--- a/src/assets/styles/components/_svg-icons.scss
+++ b/src/assets/styles/components/_svg-icons.scss
@@ -52,3 +52,27 @@
     }
   }
 }
+
+[data-theme="dark"] {
+  .svg-icon {
+    fill: var(--grey-100);
+
+  &__type {
+    $types: (
+        primary: var(--grey-50),
+        secondary: var(--grey-400),
+        tertiary: var(--grey-500),
+        disabled: var(--grey-400),
+        selected: var(--brand-300),
+        inverse: var(--grey-900),
+        brand: var(--brand-700),
+        success: var(--green-600),
+        information: var(--blue-800),
+        warning: var(--yellow-500),
+        danger: var(--red-400),
+        discovery: var(--purple-500),
+    );
+  }
+}
+
+}
